--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-uglify": "~0.2.7",
     "grunt-open": "~0.2.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lokeb/angular-panhandler.git"
   }
 }
