--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-panhandler",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "authors": [
     "Nathan Bleigh <nathan.bleigh@gmail.com>"
   ],
@@ -21,6 +21,6 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.2.3"
+    "angular": "*"
   }
 }
