--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,9 @@
 {
   "name": "angular-panhandler",
-  "version": "1.1.3",
+  "version": "1.2.0",
   "authors": [
-    "Nathan Bleigh <nathan.bleigh@gmail.com>"
+    "Nathan Bleigh <nathan.bleigh@gmail.com>",
+    "Loknath Bharti <lbharti@gmail.com"
   ],
   "description": "Drag to Pan DOM Element Descendants",
   "main": ["dist/angular-panhandler.js","dist/angular-panhandler.min.js"],
